--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -66,3 +66,9 @@ section.user_info {
   max-width: 50px;
   border-radius: 50%;
 }
+
+.gravatar_edit {
+  .gravatar {
+    max-width: 100px;
+  }
+}
