--- a/public/css/app.css
+++ b/public/css/app.css
@@ -10675,7 +10675,7 @@ nav.navbar.navbar-expand-lg {
 
 footer {
   margin-top: 45px;
-  padding-top: 5px;
+  padding: 20px;
   border-top: 1px solid #eaeaea;
   color: #777;
   font-size: 13px;
