--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -62,13 +62,49 @@ section.user_info {
 }
 
 .gravatar {
-  float: left;
-  max-width: 50px;
+  
+  max-width: 70px;
   border-radius: 50%;
 }
 
 .gravatar_edit {
   .gravatar {
     max-width: 100px;
+  }
+}
+
+.stats {
+  overflow: auto;
+  margin-top: 0;
+  padding: 0;
+  a {
+    float: left;
+    padding: 0 10px;
+    text-align: center;
+    width: 33%;
+    border-left: 1px solid #eee;
+    color: #33383c;
+    &:first-child {
+      padding-left: 0;
+      border: 0;
+    }
+    &:hover {
+      text-decoration: none;
+      color: #337ab7;
+    }
+  }
+  strong {
+    display: block;
+    font-size: 1.2em;
+    color: black;
+  }
+}
+
+@media screen and (max-width: 767px){
+  .user-info{
+    order: 1;
+  }
+  .user-post{
+    order: 2;
   }
 }
